--- a/FlockApp/FlockApp/Base.lproj/Main.storyboard
+++ b/FlockApp/FlockApp/Base.lproj/Main.storyboard
@@ -994,6 +994,9 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aj1-dD-WJf">
                                 <rect key="frame" x="157" y="584" width="60" height="30"/>
                                 <state key="normal" title="Sign Out"/>
+                                <connections>
+                                    <action selector="SignOutPressed:" destination="h08-5g-e52" eventType="touchUpInside" id="864-1q-I2D"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
